Lobby Logo fixed on Mobile

--- a/scripts/main.css
+++ b/scripts/main.css
@@ -213,7 +213,7 @@ input, select {
     }
     #game-logo {
         max-width: 100%;
-        max-height: 20vh;
+        max-height: 30vh;
     }
     .lobby-panel input, .lobby-panel select, .lobby-panel button {
         font-size: 2.5vh;
